--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <img class="card-img-top" src="2.jpg" alt="Card image cap">
       <div class="card-body">
         <p class="mt-2 mb-0">Knowledge about Database transaction schedule type.</p>
-        <a target="_blank" href="https://trungisongithhub.github.io/SQLQueryAnalyzer">DB Transaction</a>
+        <a target="_blank" href="https://trungisongithhub.github.io/DBTransactionWeb">DB Transaction</a>
       </div>
     </div>
 
