--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
 </header>
 <body class="centered-content">
   <h3>Bài Tập Lớn Hệ Quản Trị Cơ Sở Dữ Liệu</h3>
-  <h5><i>L01 - Học Kì 222 - Đại Học Bách Khoa TPHCM</i></h5>
+  <h5 style="padding-bottom:18px;"><i>L01 - Học Kì 222 - Đại Học Bách Khoa TPHCM</i></h5>
 
   <div style="display:flex;justify-content:space-around;">
     <div class="card mr-2" style="width: 16rem;">
-      <img class="card-img-top" src="1.jpg" alt="Card image cap">
+      <img class="card-img-top" src="1.jpg" alt="Card image cap" height="140">
       <div class="card-body">
         <a target="_blank" href="https://trungisongithhub.github.io/SQLQueryAnalyzer">Relational Query Concepts</a>
       </div>
     </div>
     <div class="card ml-2" style="width: 16rem;">
-      <img class="card-img-top" src="2.jpg" alt="Card image cap">
+      <img class="card-img-top" src="2.jpg" alt="Card image cap" height="140">
       <div class="card-body">
         <a target="_blank" href="https://trungisongithhub.github.io/DBTransactionWeb">DB Transaction Schedule</a>
       </div>
     </div>
     <div class="card ml-2" style="width: 16rem;">
-      <img class="card-img-top" src="dense1.png" alt="Card image cap">
+      <img class="card-img-top" src="dense1.png" alt="Card image cap" height="140">
       <div class="card-body">
         <a target="_blank" href="https://trungisongithhub.github.io/DBIndexingWeb/">DB Indexing Concepts</a>
       </div>
@@ -33,7 +33,7 @@
 
   </div>
 
-  <h4>Database Transaction Section</h4>
+  <h4 style="padding-top:28px;">Database Transaction Section</h4>
 
   <div class="card m-4 w-75">
     <div class="row">
@@ -111,7 +111,7 @@
       </div>
     </div>
   </div>
-  <label for="w3review"><i><a href="https://www.youtube.com/watch?v=VFswe9bRjNw" target="_blank">nghe nhạc giải trí</a></i></label>
+  <!-- <label for="w3review"><i><a href="https://www.youtube.com/watch?v=VFswe9bRjNw" target="_blank">nghe nhạc giải trí</a></i></label> -->
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="js/execute.js"></script><script src="js/index.js"></script>
